force-app/AqLib/apex/core/main/objects/Env__c/Env__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Environment settings.</description>
    <label>Environment</label>
</CustomObject>