force-app/AqLib/apex/core/main/objects/Env__c/fields/NowOverride__c.field-meta.xml
<CustomField>
    <fullName>NowOverride__c</fullName>
    <description>Overrides the &quot;now&quot; datetime used by all Aquiva apex code. If this is set, then Today Override is ignored.</description>
    <inlineHelpText>Overrides the &quot;now&quot; datetime used by all Aquiva apex code. If this is set, then Today Override is ignored.</inlineHelpText>
    <label>Now Override</label>
    <type>DateTime</type>
</CustomField>