force-app/AqLib/apex/core/main/objects/Env__c/fields/TodayOverride__c.field-meta.xml
<CustomField>
    <fullName>TodayOverride__c</fullName>
    <description>Overrides the &quot;today&quot; date used by all Aquiva apex code. This includes the date portion of the &quot;now&quot; time.</description>
    <inlineHelpText>Overrides the &quot;today&quot; date used by all Aquiva apex code. This includes the date portion of the &quot;now&quot; time.</inlineHelpText>
    <label>Today Override</label>
    <type>Date</type>
</CustomField>